<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_serial"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/myDeviceSerial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_unknown"
        android:paddingBottom="10dp"
        tools:context=".MainActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_mac"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/myDeviceMac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_unknown"
        android:paddingBottom="10dp"
        tools:context=".MainActivity" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_ip"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/myDeviceIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_unknown"
        android:paddingBottom="10dp"
        tools:context=".MainActivity" />
 
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/controller_host"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/myControllerHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_unknown"
        android:paddingBottom="10dp"
        tools:context=".MainActivity" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master_host"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/myMasterHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_unknown"
        android:paddingBottom="10dp"
        tools:context=".MainActivity" />
  
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master_port"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/myMasterPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_unknown"
        android:paddingBottom="10dp"
        tools:context=".MainActivity" />
    
</LinearLayout>